--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Password View Controller-->
@@ -242,29 +242,93 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="7FZ-O0-Urw" kind="relationship" relationship="rootViewController" id="mWK-5S-pD4"/>
+                        <segue destination="9aL-Lb-Edi" kind="relationship" relationship="rootViewController" id="LDx-sv-erp"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vnN-N5-b4j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1624" y="282"/>
         </scene>
-        <!--Page View Controller-->
-        <scene sceneID="4NW-6r-iuw">
-            <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="7FZ-O0-Urw" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="bDS-UJ-N7l"/>
-                </pageViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cRo-M1-cDg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2297" y="274"/>
-        </scene>
         <!--Library-->
+        <scene sceneID="D7r-no-96W">
+            <objects>
+                <viewController id="9aL-Lb-Edi" customClass="LibraryDirectoryViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jfh-iz-ZFI"/>
+                        <viewControllerLayoutGuide type="bottom" id="uzX-UX-lh2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="onr-DE-bbm">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Phd-Ux-wLn">
+                                <rect key="frame" x="140" y="201" width="320" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gqh-NA-2JO">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="XaN-2v-rv3"/>
+                                        </constraints>
+                                        <state key="normal" title="ENCRYPTED"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="DirectoryButton"/>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onDirectory:" destination="9aL-Lb-Edi" eventType="touchUpInside" id="BK1-ah-NdU"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6m7-et-UIS">
+                                        <rect key="frame" x="170" y="0.0" width="150" height="80"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="Mdm-g8-3cd"/>
+                                        </constraints>
+                                        <state key="normal" title="DECRYPTED"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="DirectoryButton"/>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="onDirectory:" destination="9aL-Lb-Edi" eventType="touchUpInside" id="qDj-Of-u1h"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="8Dm-vx-Dec"/>
+                                </constraints>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LAE-fK-m4Z">
+                                <rect key="frame" x="506" y="393" width="50" height="50"/>
+                                <state key="normal" image="DownloadButton"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="uzX-UX-lh2" firstAttribute="top" secondItem="LAE-fK-m4Z" secondAttribute="bottom" constant="44" id="dWM-oZ-5J1"/>
+                            <constraint firstItem="Phd-Ux-wLn" firstAttribute="centerY" secondItem="onr-DE-bbm" secondAttribute="centerY" multiplier="0.9" id="e3M-nf-G6T"/>
+                            <constraint firstAttribute="trailing" secondItem="LAE-fK-m4Z" secondAttribute="trailing" constant="44" id="v88-NV-5bV"/>
+                            <constraint firstItem="Phd-Ux-wLn" firstAttribute="centerX" secondItem="onr-DE-bbm" secondAttribute="centerX" id="ztd-fx-V8Z"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="DirectoryView"/>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <navigationItem key="navigationItem" title="Library" id="GAm-cg-AX0"/>
+                    <connections>
+                        <outlet property="decryptedButton" destination="6m7-et-UIS" id="hEi-6H-e2H"/>
+                        <outlet property="encryptedButton" destination="gqh-NA-2JO" id="IZ2-DL-6iC"/>
+                        <outlet property="loadButton" destination="LAE-fK-m4Z" id="YWF-DC-Yc4"/>
+                        <segue destination="B27-qf-ejK" kind="show" identifier="toFiles" id="Pt8-7Y-Vs6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lET-3Y-jAH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2309" y="282"/>
+        </scene>
+        <!--Library Table View Controller-->
         <scene sceneID="gjD-cL-gjw">
             <objects>
-                <tableViewController id="B27-qf-ejK" customClass="LibraryViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="LibraryTable" id="B27-qf-ejK" userLabel="Library Table View Controller" customClass="LibraryViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="ztz-gx-Scm">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -279,7 +343,7 @@
                                             <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -300,16 +364,17 @@
                             <outlet property="delegate" destination="B27-qf-ejK" id="phE-K5-KQN"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Library" id="hWq-Bj-BPB">
-                        <rightBarButtonItems>
-                            <barButtonItem systemItem="edit" id="3l0-Lq-gOp"/>
-                            <barButtonItem systemItem="search" id="z3G-Rn-YVx"/>
-                        </rightBarButtonItems>
+                    <navigationItem key="navigationItem" title="Load" id="m61-HX-spX">
+                        <barButtonItem key="rightBarButtonItem" title="Load" id="LIo-yX-Oj3">
+                            <connections>
+                                <action selector="onLoad:" destination="B27-qf-ejK" id="ddS-fe-yuU"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i8x-6Z-CQl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3026" y="282"/>
+            <point key="canvasLocation" x="3038" y="282"/>
         </scene>
         <!--Settings-->
         <scene sceneID="0bw-e2-JC4">
@@ -349,6 +414,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="DownloadButton" width="50" height="50"/>
         <image name="HomeButton" width="32" height="32"/>
         <image name="HomeButtonSelected" width="32" height="32"/>
         <image name="LibraryButton" width="32" height="32"/>
